# blobwar

./: .gitignore
blobwarjean/: Cargo.toml
blobwarjean/src/: configuration.rs  main.rs
blobwarjean/src/strategy/: alphabeta.rs  alphabetatranspo.rs  alphabetatranspokm.rs  alphabetatranspomemo.rs  greedy.rs  minmax.rs  mod.rs
blobwarmatteo/: Cargo.toml  README.md
blobwarmatteo/src/: configuration.rs  main.rs
blobwarmatteo/src/strategy/: alphabeta.rs  greedy.rs  minmax.rs
src/strategy/: greedy.rs  minmax.rs
