[package]
name = "blobwar"
version = "0.1.1"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
term="*"
itertools="*"
libc="0.2"
glob="*"
serde_derive="*"
serde="*"
serde_json="*"
rayon = "1.6.1"
gnuplot = "0.0.37"
crossbeam = "0.8.2"

[target.'cfg(unix)'.dependencies]
nix="0.6"
